# fetcher

./: .gitignore  Cargo.toml  README.md
nix/: default.nix
scripts/: build-static
scripts/docker/: Dockerfile
src/: main.rs
