cargo-features = ["strip"]

[package]
name = "nixek-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.19"
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = [ "compat" ] }

# Mildly optimize for size
# This fetcher gets downloaded, why not make it a bit smaller
[profile.release]
strip = true
opt-level = "z"
