[package]
name = "nixek-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1" }
futures = "0.3.19"
reqwest = { version = "0.11", features = ["rustls-tls", "blocking" ], default-features = false }
tar = "0.4.38"
tempdir = "0.3.7"

# Mildly optimize for size
# This fetcher gets downloaded, why not make it a bit smaller
[profile.release]
opt-level = "z"
